---------------------------------------------------------------------------------------------------
Version: 0.0.98
Date: 18/02/2020
  Major Features:
    - Multiplayer Update
    - You can now place more than one Mobile Factory (One per Player)
  Gui:
    - The Tooltip GUI now show to who belong a Structure
  Bugfixes:
    - Mine Dimensional Tile give now Dimensional Tile
    - All things inside the Information GUI will no longer disappear when the Mobile Factory is removed
---------------------------------------------------------------------------------------------------
Version: 0.0.97
Date: 16/02/2020
  Major Features:
    - Floor Is Lava -> Since the Original Mod is not up to date and not compatible with Mobile Factory, the feature was added
    - You will take damages on any Tiles except Dimensional Tiles
    - The Mobile Factory is safe (Factorissimo structures too)
    - Floor Is Lava can be Enabled/Disabled inside the Option GUI (Disabled by default)
  Features:
    - Add "Active Floor Is Lava" Option inside the Game Tab of the Option GUI
    - Added the Dimensional Tile, a Tile made with Dimensional Ore with +50% speed (Safe when Floor Is Lava is activated)
    - You will recieve 300 Dimensional Tiles when you start a new Game
    - Copy/Paste now work for the Deep Storage
    - Copy/Paste now work for the Ore Cleaner
    - Copy/Paste now work for the Fluid Extractor
    - Copy/Paste now work for the Matter Printer
    - Copy/Paste now work for the Matter Serializer
    - Copy/Paste now work for the Wire Data Receiver
  Gui:
    - Deep Storage show now its filter inside the Tooltip GUI
    - Add Set Filter Button inside the Deep Storage Tooltip GUI
  Bugfixes:
    - Fixed a crash with Mining Jet
    - Fixed a crash with the Information GUI
    - Mining Jet Flag can now be removed by Deconstruction Planner
  Scripting:
    - All Metatables are now checked before being used (Improved stability)