@@ -562,6 +562,13 @@ Tank5Label=Tank 5
 
 ## ---- OPTIONS ---- ##
 options=Options
+## Tab 4 ##
+tab4=MF
+GUIMFOpt=Mobile Factory
+GUIShareOpt=Share Structures
+GUIShareOptTT=Allow other Players to interact with your Structures (Drain/Send Power, Items, Fluid, ...)
+GUIUseShareOpt=Use Shared Structures
+GUIUseShareOptTT=Share your Structures with other Players (Drain/Send Power, Items, Fluid, ...)
 ## Tab 1 ##
 tab1=GUI
 GUIMainGuiOpt=Main GUI
