@@ -83,7 +83,7 @@ function PDP:update(event)
 		-- Stop if the number of lasers is exceeded --
 		if i > self.laserNumber then break end
 		-- Exclude Character, Power Drain Pole and Entities with 0 energy --
-		if entity.type ~= "character" and entity.name ~= "PowerDrainPole" and entity.name ~= "OreCleaner" and entity.name ~= "FluidExtractor" and entity.energy > 0 then
+		if entity.type ~= "character" and entity.name ~= "PowerDrainPole" and entity.name ~= "OreCleaner" and entity.name ~= "FluidExtractor" and entity.energy > 0 and Util.canUse(self.player, entity) then
 			-- Missing Internal Energy or Structure Energy --
 			local energyDrain = math.min(self.MF.maxInternalEnergy - self.MF.internalEnergy, entity.energy)
 			-- EnergyDrain or LaserDrain Caparity --
